compil.err
Lecture des listes de paquets…
Construction de l'arbre des dépendances…
Lecture des informations d'état…
libglfw3-dev est déjà la version la plus récente (3.3.10-1build1).
libglew-dev est déjà la version la plus récente (2.2.0-4build1).
0 mis à jour, 0 nouvellement installés, 0 à enlever et 4 non mis à jour.
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Found GLEW: /usr/include (found version "2.2.0") 
CMake Warning (dev) at /usr/share/cmake-3.28/Modules/FindOpenGL.cmake:381 (message):
  Policy CMP0072 is not set: FindOpenGL prefers GLVND by default when
  available.  Run "cmake --help-policy CMP0072" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  FindOpenGL found both a legacy GL library:

    OPENGL_gl_LIBRARY: /usr/lib/x86_64-linux-gnu/libGL.so

  and GLVND libraries for OpenGL and GLX:

    OPENGL_opengl_LIBRARY: /usr/lib/x86_64-linux-gnu/libOpenGL.so
    OPENGL_glx_LIBRARY: /usr/lib/x86_64-linux-gnu/libGLX.so

  OpenGL_GL_PREFERENCE has not been set to "GLVND" or "LEGACY", so for
  compatibility with CMake 3.10 and below the legacy GL library will be used.
Call Stack (most recent call first):
  CMakeLists.txt:22 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Found OpenGL: /usr/lib/x86_64-linux-gnu/libOpenGL.so   
-- YGL Configuration:
--   C++ Standard: 17
--   OpenMP: -fopenmp
--   GLEW Found: TRUE
--   GLFW3 Found: 1
--   OpenGL Found: TRUE
--   GLEW Include: /usr/include
--   GLFW3 Include: 
--   OpenGL Include: 
-- Configuring done (0.5s)
-- Generating done (0.0s)
-- Build files have been written to: /home/yannoo/Dev/YGL/build
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/camera.cpp.o
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/bounding_box.cpp.o
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/light.cpp.o
[ 11%] Building CXX object CMakeFiles/ygl.dir/src/core/mesh.cpp.o
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp: In member function ‘void ygl::BoundingBox::Expand(const ygl::Vec3&)’:
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:114:17: error: ‘Min’ is not a member of ‘ygl::Vec3’
  114 |     min = Vec3::Min(min, point);
      |                 ^~~
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:115:17: error: ‘Max’ is not a member of ‘ygl::Vec3’
  115 |     max = Vec3::Max(max, point);
      |                 ^~~
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp: In member function ‘float ygl::BoundingBox::DistanceTo(const ygl::Vec3&) const’:
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:169:26: error: ‘Clamp’ is not a member of ‘ygl::Vec3’
  169 |     Vec3 closest = Vec3::Clamp(point, min, max);
      |                          ^~~~~
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp: In member function ‘ygl::BoundingBox ygl::BoundingBox::Transform(const ygl::Mat4&) const’:
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:208:25: error: ‘Min’ is not a member of ‘ygl::Vec3’
  208 |         new_min = Vec3::Min(new_min, corner);
      |                         ^~~
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:209:25: error: ‘Max’ is not a member of ‘ygl::Vec3’
  209 |         new_max = Vec3::Max(new_max, corner);
      |                         ^~~
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp: In static member function ‘static ygl::BoundingBox ygl::BoundingBox::Merge(const ygl::BoundingBox&, const ygl::BoundingBox&)’:
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:235:15: error: ‘Min’ is not a member of ‘ygl::Vec3’
  235 |         Vec3::Min(a.min, b.min),
      |               ^~~
/home/yannoo/Dev/YGL/src/core/bounding_box.cpp:236:15: error: ‘Max’ is not a member of ‘ygl::Vec3’
  236 |         Vec3::Max(a.max, b.max)
      |               ^~~
gmake[2]: *** [CMakeFiles/ygl.dir/build.make:76 : CMakeFiles/ygl.dir/src/core/bounding_box.cpp.o] Erreur 1
gmake[2]: *** Attente des tâches non terminées....
gmake[1]: *** [CMakeFiles/Makefile2:89 : CMakeFiles/ygl.dir/all] Erreur 2
gmake: *** [Makefile:91 : all] Erreur 2
